# libechoac

./: CMakeLists.txt  LICENSE  README.md  libechoac.h  libechoac.sln
src/: echoac.cpp  echoac.h  file_utils.cpp  file_utils.h  libechoac.cpp  libechoac.vcxproj  nt.h  raw_driver.h  service_utils.cpp  service_utils.h  win_utils.cpp  win_utils.h
tests/: libechoac.h  main.cpp  tests.vcxproj  tests.vcxproj.filters
